added search functionality

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -27,3 +27,5 @@ body{
 //     background: -webkit-linear-gradient(to left, rgba(117, 67, 120, 0.89), rgba(165, 157, 61, 0.904));
 //     background: linear-gradient(to left, rgba(117, 67, 120, 0.89) , rgba(165, 157, 61, 0.904))
 // }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
