--- a/frontend/src/app/sharedpages/navbar/navbar/navbar.component.html
+++ b/frontend/src/app/sharedpages/navbar/navbar/navbar.component.html
@@ -1,21 +1,23 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary background-color" style="height: 100px;" >
+<nav class="navbar navbar-expand-lg bg-body-tertiary header" style="vertical-align: auto;">
     <div class="container-fluid">
-      <div routerLink="" routerLinkActive="active-link">
-        <h1>BLOG</h1>
+      <div routerLink="" style="height: 100%;" routerLinkActive="active-link">
+        <h1 class="icon" style="margin: auto;">BLOG</h1>
       </div>
-      <button style="background:white" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+      <div class="navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav" style="padding-left: 1%;">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+            <a class="nav-link" aria-current="page" routerLink="">Home</a>
           </li>
         </ul>
       </div> 
+      <mat-form-field appearance="outline" class="searchBar">
+        <mat-label>Blogger Search</mat-label>
+        <input style="position: relative;" matInput [(ngModel)]="value" (keydown.enter)="searchClick()" placeholder="e.g. SinclairAkoto">
+      </mat-form-field>
+      <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="searchClick()">
+        <mat-icon >search</mat-icon>
+      </button>
     </div>
   </nav>
-  <!-- <div style="border-top: 1px solid black; width: 50%; margin: auto;">
-    <br>
-  </div> -->
+
   
